[gd_scene load_steps=2 format=3 uid="uid://cyao04nmdiir0"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_h3u52"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h3u52")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.5
offset_top = -106.0
offset_right = 119.5
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Continue")
theme_override_font_sizes/font_size = 30
action_mode = 0
text = "New Game"

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../NewGame")
focus_neighbor_bottom = NodePath("../Options")
theme_override_font_sizes/font_size = 30
text = "Continue"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Continue")
focus_neighbor_bottom = NodePath("../Exit")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
theme_override_font_sizes/font_size = 30
text = "Exit"

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
